--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -44,15 +44,14 @@
                 <h2 class="text-animation">
                     I'm a <span></span>
                 </h2>
-                <p>Neque a fusce, ullamcorper imperdiet porttitor. Vehicula litora, ipsum ut taciti sodales arcu mauris egestas litora commodo.
-                    Lorem varius, ante varius aliquet lobortis bibendum. Accumsan mauris inceptos pharetra tincidunt ad arcu magna lacinia.
-                    Mi inceptos facilisi felis proin lectus mollis nulla primis, malesuada at. Ante gravida volutpat eu netus vivamus. Amet ligula pulvinar.</p>
+                <p>I am a dedicated and detail-oriented programmer with a robust background in office administration,
+                    data management, and customer service, excelling in corporate environments to ensure high standards of efficiency and accuracy.
+                    </p>
 
                 <!-- Social media icons -->
                 <div class="social-icons">
                     <a href="#" class="social-icon"><i class='bx bxl-github'></i></a>
                     <a href="#" class="social-icon"><i class='bx bxl-twitter'></i></a>
-                    <a href="#" class="social-icon"><i class='bx bxl-instagram'></i></a>
                     <a href="#" class="social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="#" class="social-icon"><i class='bx bxl-youtube' ></i></a>
 
@@ -81,9 +80,11 @@
             <div class="about-content">
                 <h2 class="heading">About <span>Me</span></h2>
                 <h3 class="text-animation"><span></span></h3>
-                <p> Neque a fusce, ullamcorper imperdiet porttitor. Vehicula litora, ipsum ut taciti sodales arcu mauris egestas litora commodo.
-                    Lorem varius, ante varius aliquet lobortis bibendum. Accumsan mauris inceptos pharetra tincidunt ad arcu magna lacinia.
-                    Mi inceptos facilisi felis proin lectus mollis nulla primis, malesuada at. Ante gravida volutpat eu netus vivamus. Amet ligula pulvinar. </p>
+                <p> Passionately pursuing software and video game development, I actively enhance my skills through solo projects
+                    using SQL, Python, AWS, Unity and Unreal Engine. Currently, I have my Certificate in Programing Languages and C++
+                    working towards my Associate Degree in Computer Information Systems at Los Angeles City College to be complete in August 2025.
+                    My studies focus on mastering programming languages such as C++, C#, SQL,
+                    Python,GitHub and cloud computing platforms like AWS, as I prepare for a career in the tech and gaming industry. </p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
@@ -97,34 +98,50 @@
                 <!--The paragraphs to change the resume-->
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
-                    <div class="timeline-date">2020 - present</div>
+                    <div class="timeline-date">April 2021 – Present (Los Angeles, CA)</div>
                     <div class="timeline-content">
-                        <h3>Job 1</h3>
-                        <p> Neque a fusce, ullamcorper imperdiet porttitor. Vehicula litora, ipsum ut taciti sodales arcu mauris egestas litora commodo.
-                            Lorem varius, ante varius aliquet lobortis bibendum. Accumsan mauris inceptos pharetra tincidunt ad arcu magna lacinia.
-                            Mi inceptos facilisi felis proin lectus mollis nulla primis, malesuada at. Ante gravida volutpat eu netus vivamus. Amet ligula pulvinar. </p>
+                        <h3>Telos Legal Corp.</h3>
+                        <h3>Service of Process Specialist / Office Administrator</h3>
+                        <p> •	Collaborate closely with paralegals, CEOs, and other counsels to facilitate the apostilling and authentication of documents.<br>
+                            •	Manage all coordination tasks for the main office as the sole office administrator, overseeing daily operations and supporting strategic administrative initiatives.<br>
+                            •	Lead the design and implementation of a document control system, reducing errors in international filings by 25%.<br>
+                            •	Create procedural guides, boosting data retrieval and operational efficiency by 40%.<br>
+                            •	Collaborate with multiple teams in offices across United States, facilitating effective communication channels and integrated operations.<br>
+                            •	Manage document processing protocols for compliance and international use, enhancing accuracy and speed to achieve a 99% client satisfaction rate.<br>
+                            •	Maintain and update computer software and external database, troubleshoot technical issues.<br>
+                            •	Integrate AI to streamline and automate operations, shortening procedural times by 30%.<br>
+                            •	Maintain meticulous spreadsheet management and implement checklist optimizations.<br>
+                            Achievements: Spearheaded remote work transition for management; sole office coordinator for the main office in Los Angeles.<br>
+                        </p>
                     </div>
                 </div>
 
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
-                    <div class="timeline-date">2013 - 2020</div>
+                    <div class="timeline-date">Jan 2019 – April 2021 (West Hollywood, CA)</div>
                     <div class="timeline-content">
-                        <h3>Job 2</h3>
-                        <p> Neque a fusce, ullamcorper imperdiet porttitor. Vehicula litora, ipsum ut taciti sodales arcu mauris egestas litora commodo.
-                            Lorem varius, ante varius aliquet lobortis bibendum. Accumsan mauris inceptos pharetra tincidunt ad arcu magna lacinia.
-                            Mi inceptos facilisi felis proin lectus mollis nulla primis, malesuada at. Ante gravida volutpat eu netus vivamus. Amet ligula pulvinar. </p>
+                        <h3>UPS Store</h3>
+                        <h3>Shift Leader / Sales Associate / Live Scan Tech</h3>
+                        <p> •	Managed daily operations and maintained online archives, advancing data security and customer satisfaction.<br>
+                            •	Updated computer software, maintained office equipment, assisted with IT operations.<br>
+                            •	Conducted biometric scans, maintaining strict adherence to Department of Justice standards.<br>
+                            •	Directed team operations and managed sensitive data for both domestic and international logistics, enhancing data security and operational reliability.<br>
+                        </p>
                     </div>
                 </div>
 
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
-                    <div class="timeline-date">2020 - 2020</div>
+                    <div class="timeline-date">August 2023 - June 2025 (Graduation)</div>
                     <div class="timeline-content">
                         <h3>Education</h3>
-                        <p> Neque a fusce, ullamcorper imperdiet porttitor. Vehicula litora, ipsum ut taciti sodales arcu mauris egestas litora commodo.
-                            Lorem varius, ante varius aliquet lobortis bibendum. Accumsan mauris inceptos pharetra tincidunt ad arcu magna lacinia.
-                            Mi inceptos facilisi felis proin lectus mollis nulla primis, malesuada at. Ante gravida volutpat eu netus vivamus. Amet ligula pulvinar. </p>
+                        <h3>Los Angeles Community College</h3>
+                        <p> • Certificate in C+++ <br>
+                            • Certificate in Programming Languages (SQL, Javascript, Python)<br>
+                            • Certificate in Applications Software — Expected August 2024<br>
+                            • Certificate in Full-Stack Development — Expected June 2025<br>
+                            • Associate Degree in Computer Information Systems — Expected June 2025<br>
+                        </p>
                     </div>
                 </div>
 
@@ -132,9 +149,12 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-content" id="skills">
                         <h3>Skills</h3>
-                        <p> Neque a fusce, ullamcorper imperdiet porttitor. Vehicula litora, ipsum ut taciti sodales arcu mauris egestas litora commodo.
-                            Lorem varius, ante varius aliquet lobortis bibendum. Accumsan mauris inceptos pharetra tincidunt ad arcu magna lacinia.
-                            Mi inceptos facilisi felis proin lectus mollis nulla primis, malesuada at. Ante gravida volutpat eu netus vivamus. Amet ligula pulvinar. </p>
+                        <p> • Programming Languages: C++, C#, SQL, Python, JavaScript, HTML, CSS <br>
+                            • Game Development Engines: Unity, Unreal Engine <br>
+                            • Cloud Technologies: AWS, Cloud Computing <br>
+                            • Project Management: Team Leadership, Process Optimization, Critical Problem-Solving, Time Management, Quality Control Management <br>
+                            • Additional Skills: Data Management, Data Entry, Office Administration, Proficient Multitasking, Proficient Organization, Expert Researcher <br>
+                        </p>
                     </div>
                 </div>
 
@@ -142,9 +162,14 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-content" id="hobbies">
                         <h3>Hobbies</h3>
-                        <p> Neque a fusce, ullamcorper imperdiet porttitor. Vehicula litora, ipsum ut taciti sodales arcu mauris egestas litora commodo.
-                            Lorem varius, ante varius aliquet lobortis bibendum. Accumsan mauris inceptos pharetra tincidunt ad arcu magna lacinia.
-                            Mi inceptos facilisi felis proin lectus mollis nulla primis, malesuada at. Ante gravida volutpat eu netus vivamus. Amet ligula pulvinar. </p>
+                        <p>
+                            • Competitive Fighting Game and Card Game players. <br>
+                            • Indie Game Development. <br>
+                            • Content Creation. <br>
+                            • Language Learning. <br>
+                            • Computer Building. <br>
+                            • Animals and Nature. <br>
+                        </p>
                     </div>
                 </div>
 
