--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -98,9 +98,9 @@
                 <!--The paragraphs to change the resume-->
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
+                    <div class="timeline-date">Telos Legal Corp.</div>
                     <div class="timeline-date">April 2021 – Present (Los Angeles, CA)</div>
                     <div class="timeline-content">
-                        <h3>Telos Legal Corp.</h3>
                         <h3>Service of Process Specialist / Office Administrator</h3>
                         <p> •	Collaborate closely with paralegals, CEOs, and other counsels to facilitate the apostilling and authentication of documents.<br>
                             •	Manage all coordination tasks for the main office as the sole office administrator, overseeing daily operations and supporting strategic administrative initiatives.<br>
@@ -118,9 +118,9 @@
 
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
+                    <div class="timeline-date">UPS Store</div>
                     <div class="timeline-date">Jan 2019 – April 2021 (West Hollywood, CA)</div>
                     <div class="timeline-content">
-                        <h3>UPS Store</h3>
                         <h3>Shift Leader / Sales Associate / Live Scan Tech</h3>
                         <p> •	Managed daily operations and maintained online archives, advancing data security and customer satisfaction.<br>
                             •	Updated computer software, maintained office equipment, assisted with IT operations.<br>
@@ -132,10 +132,25 @@
 
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
-                    <div class="timeline-date">August 2023 - June 2025 (Graduation)</div>
+                    <div class="timeline-date">Alltown/Global Montello </div>
+                    <div class="timeline-date">Feb 2013 – Nov 2018 (Centerville, MA)</div>
                     <div class="timeline-content">
-                        <h3>Education</h3>
-                        <h3>Los Angeles Community College</h3>
+                        <h3>Shift Leader / Sales Associate / Live Scan Tech</h3>
+                        <p> •	Managed daily operations and maintained online archives, advancing data security and customer satisfaction.<br>
+                            •	Updated computer software, maintained office equipment, assisted with IT operations.<br>
+                            •	Conducted biometric scans, maintaining strict adherence to Department of Justice standards.<br>
+                            •	Directed team operations and managed sensitive data for both domestic and international logistics, enhancing data security and operational reliability.<br>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">Education</div>
+                    <div class="timeline-date">Los Angeles Community College</div>
+                    <div class="timeline-date">August 2023 - June 2025 (Graduation with Associates)</div>
+                    <div class="timeline-content">
+                        <h3>Certificates and Degrees</h3>
                         <p> • Certificate in C+++ <br>
                             • Certificate in Programming Languages (SQL, Javascript, Python)<br>
                             • Certificate in Applications Software — Expected August 2024<br>
@@ -147,21 +162,28 @@
 
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
+                    <div class="timeline-date">Skills</div>
                     <div class="timeline-content" id="skills">
-                        <h3>Skills</h3>
-                        <p> • Programming Languages: C++, C#, SQL, Python, JavaScript, HTML, CSS <br>
-                            • Game Development Engines: Unity, Unreal Engine <br>
-                            • Cloud Technologies: AWS, Cloud Computing <br>
-                            • Project Management: Team Leadership, Process Optimization, Critical Problem-Solving, Time Management, Quality Control Management <br>
-                            • Additional Skills: Data Management, Data Entry, Office Administration, Proficient Multitasking, Proficient Organization, Expert Researcher <br>
-                        </p>
+                        <h3>Programming Languages</h3>
+                        <p>
+                            C++, C#, SQL, Python, JavaScript, HTML, CSS </p> <br>
+
+                        <h3>Game Development Engines</h3>
+                        <p> Unity, Unreal Engine </p> <br>
+
+                        <h3> Cloud Technologies</h3>
+                        <p> AWS </p> <br>
+
+                        <h3>Additional Skills</h3>
+                        <p> Team Leadership, Process Optimization, Critical Problem-Solving, Time Management, Quality Control Management
+                        Data Management, Data Entry, Office Administration, Proficient Multitasking, Proficient Organization, Expert Researcher </p> <br>
                     </div>
                 </div>
 
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
+                    <div class="timeline-date">Hobbies</div>
                     <div class="timeline-content" id="hobbies">
-                        <h3>Hobbies</h3>
                         <p>
                             • Competitive Fighting Game and Card Game players. <br>
                             • Indie Game Development. <br>
