--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -50,17 +50,17 @@
 
                 <!-- Social media icons -->
                 <div class="social-icons">
-                    <a href="#" class="social-icon"><i class='bx bxl-github'></i></a>
-                    <a href="#" class="social-icon"><i class='bx bxl-twitter'></i></a>
-                    <a href="#" class="social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="#" class="social-icon"><i class='bx bxl-youtube' ></i></a>
+                    <a href="https://github.com/Mrnevnev" class="social-icon" target="_blank"><i class='bx bxl-github'></i></a>
+                    <a href="https://twitter.com/Mr_NevNev" class="social-icon" target="_blank"><i class='bx bxl-twitter'></i></a>
+                    <a href="https://www.linkedin.com/in/nevill-adeyeye-aa9516174/" class="social-icon" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.youtube.com/@AyyoNevNev" class="social-icon" target="_blank"><i class='bx bxl-youtube' ></i></a>
 
                 </div>
 
                 <!-- Buttons to download resume -->
 
                 <a href="#" class="btn">
-                    Download CV
+                    Download Resume
                 </a>
 
                 <div class="home-img">
@@ -250,38 +250,16 @@
                 </div>
 
             </div>
-
         </section>
 
-        <section class="contact" id="contact">
 
-            <h2 class="heading">Contact <span>Me</span></h2>
-
-            <form action="#">
-
-                <div class="input-box">
-                    <input type="text" placeholder="Full Name">
-                    <input type="email" placeholder="Email">
-
-                </div>
-
-                <div class="input-box">
-                    <input type="number" placeholder="Phone Number">
-                    <input type="text" placeholder="Subject">
-                </div>
-
-                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-                <input type="submit" value="Send Message" class="btn">
-            </form>
-        </section>
 
         <footer class="footer">
             <div class="social">
-                <a href="#" class="social-icon"><i class='bx bxl-github'></i></a>
-                <a href="#" class="social-icon"><i class='bx bxl-twitter'></i></a>
-                <a href="#" class="social-icon"><i class='bx bxl-instagram'></i></a>
-                <a href="#" class="social-icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="#" class="social-icon"><i class='bx bxl-youtube' ></i></a>
+                <a href="https://github.com/Mrnevnev" class="social-icon" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="https://twitter.com/Mr_NevNev" class="social-icon" target="_blank"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.linkedin.com/in/nevill-adeyeye-aa9516174/" class="social-icon" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.youtube.com/@AyyoNevNev" class="social-icon" target="_blank"><i class='bx bxl-youtube' ></i></a>
             </div>
 
             <ul class="list">
