--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -165,8 +165,7 @@
                     <div class="timeline-date">Skills</div>
                     <div class="timeline-content" id="skills">
                         <h3>Programming Languages</h3>
-                        <p>
-                            C++, C#, SQL, Python, JavaScript, HTML, CSS </p> <br>
+                        <p> C++, C#, SQL, Python, JavaScript, HTML, CSS </p> <br>
 
                         <h3>Game Development Engines</h3>
                         <p> Unity, Unreal Engine </p> <br>
