--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -59,7 +59,7 @@
 
                 <!-- Buttons to download resume -->
 
-                <a href="#" class="btn">
+                <a href="resume/Nevill Alex Adeyeye - Resume 2024.docx" class="btn">
                     Download Resume
                 </a>
 
@@ -194,7 +194,9 @@
                     </div>
                 </div>
 
+                <!--
                 <a href="#" class="btn">Download Resume</a>
+                -->
             </div>
 
         </section>
@@ -217,8 +219,11 @@
                     <img src="project1.jpg" alt="">
                     <div class="portfolio-overlay">
                         <h3>Project 1</h3>
-                        <p>Neque a fusce, ullamcorper imperdiet porttitor. Vehicula litora, ipsum ut taciti sodales arcu mauris egestas litora commodo.</p>
-                        <a href="#" class="btn">Read More</a>
+                        <h3>Portfolio Website hosted on AWS</h3>
+                        <p>This portfolio website was created and hosted on AWS.
+                            The backend is using S3 buckets to store the files, Route 53 for registering the domain name and CloudFront Distribution for security.
+                            The HTML, CSS and JavaScript source code files was written by me and can be found on my GitHub.</p>
+                        <a href="https://github.com/Mrnevnev/Website/tree/main/Portfolio%20Website" class="btn" target="_blank">Read More</a>
                     </div>
                 </div>
 
@@ -230,15 +235,19 @@
                     <img src="project2.jpg" alt="">
                     <div class="portfolio-overlay">
                         <h3>Project 2</h3>
-                        <p>Neque a fusce, ullamcorper imperdiet porttitor. Vehicula litora, ipsum ut taciti sodales arcu mauris egestas litora commodo.</p>
-                        <a href="#" class="btn">Read More</a>
+                        <h3>Pack Crackers Card Game</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus atque blanditiis consectetur, cum ea eius facere molestiae molestias mollitia necessitatibus, neque perferendis quibusdam repudiandae sint tempora tempore velit voluptatem.</p>
+                        <a href="https://mrnevnev.itch.io/" class="btn" target="_blank">Read More</a>
                     </div>
                 </div>
 
-                <div class="portfolio-box">
-                    <!--Icons above the image
+                <!--Icons above the image
                         Change later
                     -->
+                <!--
+                <div class="portfolio-box">
+
+
                     <i class="bx bxs-devices"></i>
                     <img src="project3.jpg" alt="">
                     <div class="portfolio-overlay">
@@ -247,11 +256,36 @@
                         <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
+                -->
 
             </div>
         </section>
 
 
+    <section class="contact" id="contact">
+
+        <h2 class="heading">Contact <span>Me</span></h2>
+        <h3 class="heading">Hiimnevill@gmail.com</h3>
+
+        <!--
+        <form action="#">
+
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email">
+
+            </div>
+
+            <div class="input-box">
+                <input type="number" placeholder="Phone Number">
+                <input type="text" placeholder="Subject">
+            </div>
+
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
+        -->
+    </section>
 
         <footer class="footer">
             <div class="social">
@@ -263,14 +297,18 @@
 
             <ul class="list">
                 <li>
-                    <a href="#">FAQ</a>
+                    <a href="#home">Home</a>
                 </li>
                 <li>
-                    <a href="#">About Me</a>
+                    <a href="#about">About Me</a>
                 </li>
                 <li>
 
-                    <a href="#">Portfolio</a>
+                    <a href="#resume">Resume</a>
+                </li>
+                <li>
+
+                    <a href="#portfolio">Portfolio</a>
                 </li>
                 <li>
 
