Added Email button
       <h2 class="heading">Contact <span>Me</span> <br>
        <a href="mailto:hiimnevill@gmail.com" class="btn"> Hiimnevill@gmail.com</a> </h2>

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -264,8 +264,10 @@
 
     <section class="contact" id="contact">
 
-        <h2 class="heading">Contact <span>Me</span></h2>
-        <h3 class="heading">Hiimnevill@gmail.com</h3>
+        <h2 class="heading">Contact <span>Me</span> <br>
+        <a href="mailto:hiimnevill@gmail.com" class="btn"> Hiimnevill@gmail.com</a> </h2>
+
+
 
         <!--
         <form action="#">
