Add target blank

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -59,7 +59,7 @@
 
                 <!-- Buttons to download resume -->
 
-                <a href="resume/Nevill Alex Adeyeye - Resume 2024.pdf" class="btn">
+                <a href="resume/Nevill Alex Adeyeye - Resume 2024.pdf" class="btn" target="_blank">
                     Download Resume
                 </a>
 
